// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`addHelpsFromSkill > shall add 1 average produce help 1`] = `
{
  "advanced": {
    "averageHelps": 2,
    "berryProductionDistribution": {
      "2": 100,
    },
    "carrySize": 10,
    "dayHelps": 2,
    "dayPeriod": {
      "averageEnergy": 0,
      "averageFrequency": 0,
      "spilledIngredients": [],
    },
    "frequencySplit": {
      "eighty": 0,
      "forty": 0,
      "one": 0,
      "sixty": 0,
      "zero": 0,
    },
    "ingredientDistributions": {
      "Tail": {
        "0": 100,
      },
    },
    "ingredientPercentage": 0.2,
    "maxFrequency": 1428.75,
    "morningProcs": 0,
    "nightHelps": 0,
    "nightHelpsAfterSS": 0,
    "nightHelpsBeforeSS": 0,
    "nightPeriod": {
      "averageEnergy": 0,
      "averageFrequency": 0,
      "spilledIngredients": [],
    },
    "skillCrits": 0,
    "skillPercentage": 0.02,
    "skillProcDistribution": {},
    "sneakySnack": {
      "amount": 0,
      "berry": {
        "name": "BELUE",
        "type": "steel",
        "value": 33,
      },
      "level": 60,
    },
    "teamSupport": {
      "energy": 0,
      "helps": 0,
    },
    "totalHelps": 2,
    "totalRecovery": 0,
    "wastedEnergy": 0,
  },
  "externalId": "some id",
  "pokemonWithIngredients": {
    "ingredients": Int16Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
    ],
    "pokemon": "MOCKEMON",
  },
  "produceFromSkill": {
    "berries": [],
    "ingredients": [],
  },
  "produceTotal": {
    "berries": [
      {
        "amount": 2,
        "berry": {
          "name": "BELUE",
          "type": "steel",
          "value": 33,
        },
        "level": 60,
      },
    ],
    "ingredients": [],
  },
  "produceWithoutSkill": {
    "berries": [
      {
        "amount": 2,
        "berry": {
          "name": "BELUE",
          "type": "steel",
          "value": 33,
        },
        "level": 60,
      },
    ],
    "ingredients": [],
  },
  "skillLevel": 6,
  "skillProcs": 0,
  "skillValue": {},
  "strength": {
    "berries": {
      "breakdown": {
        "base": 284,
        "favored": 0,
        "islandBonus": 0,
      },
      "total": 284,
    },
    "skill": {
      "breakdown": {
        "base": 0,
        "islandBonus": 0,
      },
      "total": 0,
    },
  },
}
`;

exports[`addHelpsFromSkill > shall add 2 average produce help 1`] = `
{
  "advanced": {
    "averageHelps": 2,
    "berryProductionDistribution": {
      "2": 100,
    },
    "carrySize": 10,
    "dayHelps": 2,
    "dayPeriod": {
      "averageEnergy": 0,
      "averageFrequency": 0,
      "spilledIngredients": [],
    },
    "frequencySplit": {
      "eighty": 0,
      "forty": 0,
      "one": 0,
      "sixty": 0,
      "zero": 0,
    },
    "ingredientDistributions": {
      "Tail": {
        "0": 100,
      },
    },
    "ingredientPercentage": 0.2,
    "maxFrequency": 1428.75,
    "morningProcs": 0,
    "nightHelps": 0,
    "nightHelpsAfterSS": 0,
    "nightHelpsBeforeSS": 0,
    "nightPeriod": {
      "averageEnergy": 0,
      "averageFrequency": 0,
      "spilledIngredients": [],
    },
    "skillCrits": 0,
    "skillPercentage": 0.02,
    "skillProcDistribution": {},
    "sneakySnack": {
      "amount": 0,
      "berry": {
        "name": "BELUE",
        "type": "steel",
        "value": 33,
      },
      "level": 60,
    },
    "teamSupport": {
      "energy": 0,
      "helps": 0,
    },
    "totalHelps": 2,
    "totalRecovery": 0,
    "wastedEnergy": 0,
  },
  "externalId": "some id",
  "pokemonWithIngredients": {
    "ingredients": Int16Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
    ],
    "pokemon": "MOCKEMON",
  },
  "produceFromSkill": {
    "berries": [],
    "ingredients": [],
  },
  "produceTotal": {
    "berries": [
      {
        "amount": 2,
        "berry": {
          "name": "BELUE",
          "type": "steel",
          "value": 33,
        },
        "level": 60,
      },
    ],
    "ingredients": [],
  },
  "produceWithoutSkill": {
    "berries": [
      {
        "amount": 2,
        "berry": {
          "name": "BELUE",
          "type": "steel",
          "value": 33,
        },
        "level": 60,
      },
    ],
    "ingredients": [],
  },
  "skillLevel": 6,
  "skillProcs": 0,
  "skillValue": {},
  "strength": {
    "berries": {
      "breakdown": {
        "base": 284,
        "favored": 0,
        "islandBonus": 0,
      },
      "total": 284,
    },
    "skill": {
      "breakdown": {
        "base": 0,
        "islandBonus": 0,
      },
      "total": 0,
    },
  },
}
`;

exports[`addHelpsFromSkill > shall not add produce if adding 0 helps 1`] = `
{
  "advanced": {
    "averageHelps": 0,
    "berryProductionDistribution": {
      "0": 100,
    },
    "carrySize": 10,
    "dayHelps": 0,
    "dayPeriod": {
      "averageEnergy": 0,
      "averageFrequency": 0,
      "spilledIngredients": [],
    },
    "frequencySplit": {
      "eighty": NaN,
      "forty": NaN,
      "one": NaN,
      "sixty": NaN,
      "zero": NaN,
    },
    "ingredientDistributions": {
      "Tail": {
        "0": 100,
      },
    },
    "ingredientPercentage": 0.2,
    "maxFrequency": 1428.75,
    "morningProcs": 0,
    "nightHelps": 0,
    "nightHelpsAfterSS": 0,
    "nightHelpsBeforeSS": 0,
    "nightPeriod": {
      "averageEnergy": 0,
      "averageFrequency": 0,
      "spilledIngredients": [],
    },
    "skillCrits": 0,
    "skillPercentage": 0.02,
    "skillProcDistribution": {},
    "sneakySnack": {
      "amount": 0,
      "berry": {
        "name": "BELUE",
        "type": "steel",
        "value": 33,
      },
      "level": 60,
    },
    "teamSupport": {
      "energy": 0,
      "helps": 0,
    },
    "totalHelps": 0,
    "totalRecovery": 0,
    "wastedEnergy": 0,
  },
  "externalId": "some id",
  "pokemonWithIngredients": {
    "ingredients": Int16Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
    ],
    "pokemon": "MOCKEMON",
  },
  "produceFromSkill": {
    "berries": [],
    "ingredients": [],
  },
  "produceTotal": {
    "berries": [],
    "ingredients": [],
  },
  "produceWithoutSkill": {
    "berries": [
      {
        "amount": 0,
        "berry": {
          "name": "BELUE",
          "type": "steel",
          "value": 33,
        },
        "level": 60,
      },
    ],
    "ingredients": [],
  },
  "skillLevel": 6,
  "skillProcs": 0,
  "skillValue": {},
  "strength": {
    "berries": {
      "breakdown": {
        "base": 0,
        "favored": 0,
        "islandBonus": 0,
      },
      "total": 0,
    },
    "skill": {
      "breakdown": {
        "base": 0,
        "islandBonus": 0,
      },
      "total": 0,
    },
  },
}
`;

exports[`attemptDayHelp > shall not perform a help if time has not passed scheduled help time 1`] = `
{
  "advanced": {
    "averageHelps": 0,
    "berryProductionDistribution": {
      "0": 100,
    },
    "carrySize": 10,
    "dayHelps": 0,
    "dayPeriod": {
      "averageEnergy": 0.3641456582633053,
      "averageFrequency": 7.8619047619047615,
      "spilledIngredients": [],
    },
    "frequencySplit": {
      "eighty": NaN,
      "forty": NaN,
      "one": NaN,
      "sixty": Infinity,
      "zero": NaN,
    },
    "ingredientDistributions": {
      "Tail": {
        "0": 100,
      },
    },
    "ingredientPercentage": 0.2,
    "maxFrequency": 1428.75,
    "morningProcs": 0,
    "nightHelps": 0,
    "nightHelpsAfterSS": 0,
    "nightHelpsBeforeSS": 0,
    "nightPeriod": {
      "averageEnergy": 0,
      "averageFrequency": 0,
      "spilledIngredients": [],
    },
    "skillCrits": 0,
    "skillPercentage": 0.02,
    "skillProcDistribution": {},
    "sneakySnack": {
      "amount": 0,
      "berry": {
        "name": "BELUE",
        "type": "steel",
        "value": 33,
      },
      "level": 60,
    },
    "teamSupport": {
      "energy": 0,
      "helps": 0,
    },
    "totalHelps": 0,
    "totalRecovery": 0,
    "wastedEnergy": 0,
  },
  "externalId": "some id",
  "pokemonWithIngredients": {
    "ingredients": Int16Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
    ],
    "pokemon": "MOCKEMON",
  },
  "produceFromSkill": {
    "berries": [],
    "ingredients": [],
  },
  "produceTotal": {
    "berries": [],
    "ingredients": [],
  },
  "produceWithoutSkill": {
    "berries": [
      {
        "amount": 0,
        "berry": {
          "name": "BELUE",
          "type": "steel",
          "value": 33,
        },
        "level": 60,
      },
    ],
    "ingredients": [],
  },
  "skillLevel": 6,
  "skillProcs": 0,
  "skillValue": {},
  "strength": {
    "berries": {
      "breakdown": {
        "base": 0,
        "favored": 0,
        "islandBonus": 0,
      },
      "total": 0,
    },
    "skill": {
      "breakdown": {
        "base": 0,
        "islandBonus": 0,
      },
      "total": 0,
    },
  },
}
`;

exports[`attemptDayHelp > shall perform a help if time surpasses scheduled help time 1`] = `
{
  "advanced": {
    "averageHelps": 1,
    "berryProductionDistribution": {
      "1": 100,
    },
    "carrySize": 10,
    "dayHelps": 1,
    "dayPeriod": {
      "averageEnergy": 0.3641456582633053,
      "averageFrequency": 7.8619047619047615,
      "spilledIngredients": [],
    },
    "frequencySplit": {
      "eighty": 0,
      "forty": 0,
      "one": 0,
      "sixty": 1,
      "zero": 0,
    },
    "ingredientDistributions": {
      "Tail": {
        "0": 100,
      },
    },
    "ingredientPercentage": 0.2,
    "maxFrequency": 1428.75,
    "morningProcs": 0,
    "nightHelps": 0,
    "nightHelpsAfterSS": 0,
    "nightHelpsBeforeSS": 0,
    "nightPeriod": {
      "averageEnergy": 0,
      "averageFrequency": 0,
      "spilledIngredients": [],
    },
    "skillCrits": 0,
    "skillPercentage": 0,
    "skillProcDistribution": {},
    "sneakySnack": {
      "amount": 0,
      "berry": {
        "name": "BELUE",
        "type": "steel",
        "value": 33,
      },
      "level": 60,
    },
    "teamSupport": {
      "energy": 0,
      "helps": 0,
    },
    "totalHelps": 1,
    "totalRecovery": 0,
    "wastedEnergy": 0,
  },
  "externalId": "some id",
  "pokemonWithIngredients": {
    "ingredients": Int16Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
    ],
    "pokemon": "MOCKEMON",
  },
  "produceFromSkill": {
    "berries": [],
    "ingredients": [],
  },
  "produceTotal": {
    "berries": [
      {
        "amount": 1,
        "berry": {
          "name": "BELUE",
          "type": "steel",
          "value": 33,
        },
        "level": 60,
      },
    ],
    "ingredients": [],
  },
  "produceWithoutSkill": {
    "berries": [
      {
        "amount": 1,
        "berry": {
          "name": "BELUE",
          "type": "steel",
          "value": 33,
        },
        "level": 60,
      },
    ],
    "ingredients": [],
  },
  "skillLevel": 6,
  "skillProcs": 0,
  "skillValue": {},
  "strength": {
    "berries": {
      "breakdown": {
        "base": 142,
        "favored": 0,
        "islandBonus": 0,
      },
      "total": 142,
    },
    "skill": {
      "breakdown": {
        "base": 0,
        "islandBonus": 0,
      },
      "total": 0,
    },
  },
}
`;

exports[`attemptNightHelp > shall roll skill proc on helps before inventory full at night, upon collecting in the morning 1`] = `
{
  "advanced": {
    "averageHelps": 1,
    "berryProductionDistribution": {
      "1": 100,
    },
    "carrySize": 10,
    "dayHelps": 0,
    "dayPeriod": {
      "averageEnergy": 0,
      "averageFrequency": 0,
      "spilledIngredients": [],
    },
    "frequencySplit": {
      "eighty": 1,
      "forty": 0,
      "one": 0,
      "sixty": 0,
      "zero": 0,
    },
    "ingredientDistributions": {
      "Tail": {
        "0": 100,
      },
    },
    "ingredientPercentage": 0.2,
    "maxFrequency": 1428.75,
    "morningProcs": 1,
    "nightHelps": 1,
    "nightHelpsAfterSS": 0,
    "nightHelpsBeforeSS": 1,
    "nightPeriod": {
      "averageEnergy": 0.9803921568627451,
      "averageFrequency": 14.007352941176471,
      "spilledIngredients": [],
    },
    "skillCrits": 0,
    "skillPercentage": 1,
    "skillProcDistribution": {},
    "sneakySnack": {
      "amount": 0,
      "berry": {
        "name": "BELUE",
        "type": "steel",
        "value": 33,
      },
      "level": 60,
    },
    "teamSupport": {
      "energy": 0,
      "helps": 0,
    },
    "totalHelps": 1,
    "totalRecovery": 0,
    "wastedEnergy": 0,
  },
  "externalId": "some id",
  "pokemonWithIngredients": {
    "ingredients": Int16Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
    ],
    "pokemon": "MOCKEMON",
  },
  "produceFromSkill": {
    "berries": [],
    "ingredients": [],
  },
  "produceTotal": {
    "berries": [
      {
        "amount": 1,
        "berry": {
          "name": "BELUE",
          "type": "steel",
          "value": 33,
        },
        "level": 60,
      },
    ],
    "ingredients": [],
  },
  "produceWithoutSkill": {
    "berries": [
      {
        "amount": 1,
        "berry": {
          "name": "BELUE",
          "type": "steel",
          "value": 33,
        },
        "level": 60,
      },
    ],
    "ingredients": [],
  },
  "skillLevel": 6,
  "skillProcs": 1,
  "skillValue": {
    "strength": {
      "amountToSelf": 2066,
      "amountToTeam": 0,
    },
  },
  "strength": {
    "berries": {
      "breakdown": {
        "base": 142,
        "favored": 0,
        "islandBonus": 0,
      },
      "total": 142,
    },
    "skill": {
      "breakdown": {
        "base": 2066,
        "islandBonus": 0,
      },
      "total": 2066,
    },
  },
}
`;
